# reghidra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  typegen-drift-check.yml  typegen-regen.yml
crates/reghidra-cli/: Cargo.toml  README.md
crates/reghidra-cli/src/: main.rs
crates/reghidra-cli/tests/: cli.rs
crates/reghidra-core/: Cargo.toml
crates/reghidra-core/examples/: dump_sig.rs  iat_check.rs  probe_typed.rs
crates/reghidra-core/src/: analysis.rs  arch.rs  binary.rs  demangle.rs  disasm.rs  error.rs  lib.rs  project.rs
crates/reghidra-core/src/analysis/: bundled_sigs.rs  cfg.rs  detect_features.rs  flirt.rs  functions.rs  lifting.rs  naming.rs  xrefs.rs
crates/reghidra-core/src/types/: archive.rs  mod.rs
crates/reghidra-core/tests/: data_sources.rs  detect_pipeline.rs  rizin_visibility.rs  typed_decompile.rs  wildfire_pe_boundaries.rs
crates/reghidra-decompile/: Cargo.toml
crates/reghidra-decompile/src/: ast.rs  emit.rs  expr_builder.rs  lib.rs  stackframe.rs  structuring.rs  types.rs  varnames.rs
crates/reghidra-decompile/src/type_archive/: mod.rs
crates/reghidra-decompile/tests/: cast_strip.rs  slot_subsumption.rs  typed_call_render.rs
crates/reghidra-detect/: Cargo.toml
crates/reghidra-detect/src/: bundled.rs  entropy.rs  eval.rs  features.rs  lib.rs  parser.rs  rule.rs
crates/reghidra-detect/tests/: bundled_rules.rs  eval.rs  parser.rs
crates/reghidra-gui/: Cargo.toml  build.rs
crates/reghidra-gui/src/: annotations.rs  app.rs  context_menu.rs  help.rs  lib.rs  main.rs  palette.rs  syntax.rs  theme.rs  undo.rs
crates/reghidra-gui/src/views/: cfg.rs  data_sources.rs  decompile.rs  detections.rs  disasm.rs  hex.rs  ir.rs  mod.rs  side_panel.rs  xrefs.rs
crates/reghidra-gui/tests/: kittest_detections.rs
crates/reghidra-ir/: Cargo.toml
crates/reghidra-ir/src/: display.rs  lib.rs  op.rs  optimize.rs  types.rs
crates/reghidra-ir/src/lifter/: arm64.rs  mod.rs  x86_64.rs
docs/superpowers/plans/: 2026-04-14-yaml-detection-rules.md
docs/superpowers/specs/: 2026-04-14-yaml-detection-rules-design.md
rules/: README.md
rules/anti_analysis/: checkremotedebuggerpresent.yml  cpuid-brand-string.yml  hypervisor-bit.yml  int3-scan.yml  isdebuggerpresent.yml  ntqueryinformationprocess-debug.yml  peb-beingdebugged.yml  peb-ntglobalflag.yml  process-list-scan.yml  rdtsc-timing.yml  sandbox-username-check.yml  sleep-skew.yml  vmware-io-port.yml
rules/crypto/: aes-sbox-textual.yml  bcrypt-aes.yml  crypt32-full-api-chain.yml  custom-xor-loop.yml  rc4-ksa-pattern.yml
rules/injection/: createremotethread.yml  ntmapviewofsection.yml  process-hollowing.yml  queueuserapc.yml  reflective-loader.yml  setwindowshookex.yml  thread-hijack.yml  virtualallocex-writeprocessmemory.yml
rules/network/: dns-exfil-heuristic.yml  raw-sockets.yml  winhttp.yml  wininet-http.yml  winsock-connect.yml
rules/packers/: aspack-section.yml  packed-high-entropy.yml  themida-tls.yml  upx-sections.yml  vmprotect-sections.yml
rules/persistence/: appinit-dlls.yml  ifeo-debugger.yml  run-key-write.yml  schtasks-shell.yml  service-install.yml  winlogon-notify-key.yml  wmi-event-subscription.yml
rules/suspicious_api/: dynamic-api-resolution.yml  manual-iat-resolution.yml  privilege-escalation-apis.yml  shellcode-allocate-exec.yml  token-manipulation.yml  unhook-ntdll.yml
scripts/: bundle-macos.sh
tests/fixtures/: SOURCES.md  wildfire-test-elf-file  wildfire-test-macos-file
tools/typegen/: Cargo.toml
tools/typegen/src/: main.rs  model.rs
tools/typegen/src/walker/: libc.rs  mod.rs  rizin_sdb.rs  rust_ty.rs  windows.rs
types/: README.md  posix.rtarch  rizin-libc.rtarch  rizin-windows.rtarch  ucrt.rtarch
