[workspace]
members = [
    "crates/reghidra-core",
    "crates/reghidra-ir",
    "crates/reghidra-decompile",
    "crates/reghidra-gui",
    "crates/reghidra-cli",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/reghidra/reghidra"

[workspace.dependencies]
reghidra-core = { path = "crates/reghidra-core" }
reghidra-ir = { path = "crates/reghidra-ir" }
reghidra-decompile = { path = "crates/reghidra-decompile" }
goblin = "0.9"
capstone = "0.12"
egui = "0.31"
eframe = "0.31"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
include_dir = "0.7"
