[workspace]
members = [
    "crates/reghidra-core",
    "crates/reghidra-ir",
    "crates/reghidra-decompile",
    "crates/reghidra-gui",
    "crates/reghidra-cli",
]
# The typegen maintainer tool lives in its own standalone workspace
# (`tools/typegen/Cargo.toml` declares its own `[workspace]` table) so
# that `cargo build` / `cargo test` at the repo root never touches it.
# Excluding the directory here is belt-and-suspenders — it prevents
# cargo's parent-workspace discovery from accidentally pulling the tool
# into the main dep graph, which would drag in syn, clap, cargo_metadata,
# libc, and (eventually) windows-sys.
exclude = ["tools/typegen"]
resolver = "2"

[workspace.package]
version = "1.4.5"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/reghidra/reghidra"

[workspace.dependencies]
reghidra-core = { path = "crates/reghidra-core" }
reghidra-ir = { path = "crates/reghidra-ir" }
reghidra-decompile = { path = "crates/reghidra-decompile" }
goblin = "0.9"
capstone = "0.12"
egui = "0.31"
eframe = "0.31"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
include_dir = "0.7"
msvc-demangler = "0.11"
postcard = { version = "1", features = ["alloc"], default-features = false }
