[package]
name = "reghidra-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reghidra-cli"
path = "src/main.rs"

[dependencies]
reghidra-core = { workspace = true }
reghidra-decompile = { workspace = true }
reghidra-detect = { path = "../reghidra-detect" }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[[test]]
name = "cli"
path = "tests/cli.rs"
