[package]
name = "reghidra-core"
version.workspace = true
edition.workspace = true

[dependencies]
goblin = { workspace = true }
capstone = { workspace = true }
reghidra-ir = { workspace = true }
reghidra-decompile = { workspace = true }
reghidra-detect = { path = "../reghidra-detect" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }
include_dir = { workspace = true }
undname = { workspace = true }
