[package]
name = "reghidra-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reghidra"
path = "src/main.rs"

[lib]
name = "reghidra_gui"
path = "src/lib.rs"

[features]
test-harness = ["reghidra-core/test-harness"]

[dependencies]
reghidra-core = { workspace = true }
reghidra-ir = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[[test]]
name = "kittest_detections"
path = "tests/kittest_detections.rs"
required-features = ["test-harness"]

[dev-dependencies]
egui_kittest = "0.31"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "Reghidra"
identifier = "com.reghidra.app"
category = "Developer Tool"
short_description = "A modern reverse engineering framework"
copyright = "Copyright 2024-2026 Reghidra contributors"
